--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,11 +1,9 @@
 spring:
-  datasource:
-    url: jdbc:mariadb://localhost:3306/typing_speed_test
-    driver-class-name: org.mariadb.jdbc.Driver
-    username: user
-    password: password # encoding it would be a better practice
-
-  jpa:
-    hibernate.ddl-auto: create
-    generate-ddl: true
-    show-sql: true
+    datasource:
+        url: jdbc:postgresql://${DB_URL}/${DB_NAME}
+        username: ${DB_USER}
+        password: ${DB_PASSWORD}
+    jpa:
+        hibernate.ddl-auto: create-drop
+        generate-ddl: true
+        show-sql: true
